# Jolish

./: .gitignore  Cargo.toml  README.md  shellbook.sh
benches/: my_benchmark.rs
src/: args.rs  bam.rs  bam_handler.rs  correct_handler.rs  correcter.rs  fastq.rs  fastq_handler.rs  fib.rs  main.rs  poa.rs  poa_test.rs  spoa.rs  spoa_part.rs  writer.rs
version_V0.0.1/: Jolish
