[package]
name = "Jolish"
version = "0.0.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
bio = "2.0.3"
flate2 = "1.0.34"
flume = "0.11.1"
log = "0.4.22"
petgraph = "0.6.5"
pretty_env_logger = "0.5.0"
serde = "1.0.214"
serde_derive = "1.0.214"
anyhow = "1.0.93"


[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
